# Clashie

./: .gitignore  CMakeLists.txt  README.md  build_web.sh
data/balance/: buildings.json  troops.json
engine/: CMakeLists.txt
engine/include/pebble/audio/: audio.h
engine/include/pebble/core/: fixed_point.h  input.h  memory.h  types.h
engine/include/pebble/framework/: flow_field.h  particle.h  ui.h
engine/include/pebble/gfx/: camera.h  renderer.h  sprite_batch.h
engine/include/pebble/platform/: platform.h
engine/src/audio/: audio.cpp  audio_stub_web.cpp
engine/src/core/: fixed_point.cpp  input.cpp  memory.cpp
engine/src/framework/: flow_field.cpp  particle.cpp  tile_map.cpp  ui.cpp
engine/src/gfx/: camera.cpp  sprite_batch.cpp
engine/src/gfx/metal/: renderer_metal.h  renderer_metal.mm
engine/src/gfx/opengl/: renderer_opengl.cpp  renderer_opengl.h
engine/src/platform/: platform_stub.cpp
engine/src/platform/cocoa/: platform_cocoa.mm  window_cocoa.mm
engine/src/platform/web/: platform_web.cpp
game/: CMakeLists.txt
game/include/miniclash/: building.h  grid.h  replay.h  simulation.h  troop.h
game/src/: building_data.cpp  main.cpp  replay.cpp  simulation.cpp  troop_data.cpp
tests/: CMakeLists.txt
tests/unit/: test_fixed_point.cpp  test_memory.cpp  test_simulation.cpp
web/: index.html
